Add tag line ticker to banner

--- a/apps/site/fonts/fonts.css
+++ b/apps/site/fonts/fonts.css
@@ -1,10 +1,10 @@
-@font-face {
+/* @font-face {
     font-family: 'Neumatic Gothic Round';
     src: url('neumaticgothicround-bold-webfont.woff2') format('woff2'),
          url('neumaticgothicround-bold-webfont.woff') format('woff');
     font-weight: bold;
     font-style: normal;
-}
+} */
 
 @font-face {
     font-family: 'Neumatic Gothic Round';
